--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="//at.alicdn.com/t/c/font_3944494_jfplzf5j3hc.js"></script>
-    <title>Vite + React + TS</title>
+    <script src="//at.alicdn.com/t/c/font_3944494_xbaajoyejxp.js"></script>
+    <title>Peanut Q&A</title>
   </head>
   <body>
     <div id="root"></div>
